implements order service and pessimistic Lock